Fix Detail View, Typos

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="vZ6-D7-cdN" id="jG1-My-g7R"/>
                                     <outlet property="thumbnailImageView" destination="r61-IM-1VD" id="Zfp-J3-73E"/>
-                                    <segue destination="WCQ-Mq-2wn" kind="show" identifier="UserDetailShowSegue" id="6qN-Vg-YDX"/>
+                                    <segue destination="WCQ-Mq-2wn" kind="show" identifier="ShowDetailsSegue" id="6qN-Vg-YDX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -67,7 +67,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLS-tj-jlc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3823" y="-21"/>
+            <point key="canvasLocation" x="3739.130434782609" y="-21.428571428571427"/>
         </scene>
         <!--User Detail View Controller-->
         <scene sceneID="D79-Vt-mXs">
@@ -113,7 +113,8 @@
                             <constraint firstItem="5Di-Wq-sc4" firstAttribute="top" secondItem="fAM-Pz-Yol" secondAttribute="top" constant="20" id="4rX-6a-5ed"/>
                             <constraint firstItem="psk-82-zoc" firstAttribute="top" secondItem="5Di-Wq-sc4" secondAttribute="bottom" constant="20" id="5TH-6p-xf7"/>
                             <constraint firstItem="fAM-Pz-Yol" firstAttribute="trailing" secondItem="5Di-Wq-sc4" secondAttribute="trailing" constant="57" id="HaN-GZ-v9M"/>
-                            <constraint firstItem="psk-82-zoc" firstAttribute="centerX" secondItem="5Di-Wq-sc4" secondAttribute="centerX" id="eEh-mJ-K8C"/>
+                            <constraint firstItem="5Di-Wq-sc4" firstAttribute="centerX" secondItem="3EN-2s-3B9" secondAttribute="centerX" id="OxK-Wl-C6S"/>
+                            <constraint firstItem="psk-82-zoc" firstAttribute="centerX" secondItem="3EN-2s-3B9" secondAttribute="centerX" id="Yar-Aq-hx1"/>
                             <constraint firstItem="5Di-Wq-sc4" firstAttribute="leading" secondItem="fAM-Pz-Yol" secondAttribute="leading" constant="57" id="jMB-yj-ubo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fAM-Pz-Yol"/>
@@ -128,7 +129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ak4-qr-0LC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4739" y="-21"/>
+            <point key="canvasLocation" x="4440.579710144928" y="-21.428571428571427"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="z2r-Mp-ds8">
